Add SDL libraries and fix errors

--- a/ProiectMC/ClientMC/ClientMC.vcxproj
+++ b/ProiectMC/ClientMC/ClientMC.vcxproj
@@ -72,19 +72,19 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <IncludePath>E:\Projects\LIBRARIES\SDL2-devel-2.30.11-VC\SDL2-2.30.11\include;E:\Projects\LIBRARIES\SDL2_ttf-devel-2.24.0-VC\SDL2_ttf-2.24.0\include;E:\Projects\LIBRARIES\SDL2_image-devel-2.8.4-VC\SDL2_image-2.8.4\include;$(IncludePath)</IncludePath>
-    <LibraryPath>E:\Projects\LIBRARIES\SDL2-devel-2.30.11-VC\SDL2-2.30.11\lib\x64;E:\Projects\LIBRARIES\SDL2_ttf-devel-2.24.0-VC\SDL2_ttf-2.24.0\lib\x64;E:\Projects\LIBRARIES\SDL2_image-devel-2.8.4-VC\SDL2_image-2.8.4\lib\x64;$(LibraryPath)</LibraryPath>
+    <LibraryPath>E:\Projects\LIBRARIES\SDL2-devel-2.30.11-VC\SDL2-2.30.11\lib\x64;E:\Projects\LIBRARIES\SDL2_ttf-devel-2.24.0-VC\SDL2_ttf-2.24.0\lib;E:\Projects\LIBRARIES\SDL2_image-devel-2.8.4-VC\SDL2_image-2.8.4\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <IncludePath>E:\Projects\LIBRARIES\SDL2-devel-2.30.11-VC\SDL2-2.30.11\include;E:\Projects\LIBRARIES\SDL2_ttf-devel-2.24.0-VC\SDL2_ttf-2.24.0\include;E:\Projects\LIBRARIES\SDL2_image-devel-2.8.4-VC\SDL2_image-2.8.4\include;$(IncludePath)</IncludePath>
-    <LibraryPath>E:\Projects\LIBRARIES\SDL2-devel-2.30.11-VC\SDL2-2.30.11\lib\x64;E:\Projects\LIBRARIES\SDL2_ttf-devel-2.24.0-VC\SDL2_ttf-2.24.0\lib\x64;E:\Projects\LIBRARIES\SDL2_image-devel-2.8.4-VC\SDL2_image-2.8.4\lib\x64;$(LibraryPath)</LibraryPath>
+    <LibraryPath>E:\Projects\LIBRARIES\SDL2-devel-2.30.11-VC\SDL2-2.30.11\lib\x64;E:\Projects\LIBRARIES\SDL2_ttf-devel-2.24.0-VC\SDL2_ttf-2.24.0\lib;E:\Projects\LIBRARIES\SDL2_image-devel-2.8.4-VC\SDL2_image-2.8.4\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <IncludePath>E:\Projects\LIBRARIES\SDL2-devel-2.30.11-VC\SDL2-2.30.11\include;E:\Projects\LIBRARIES\SDL2_ttf-devel-2.24.0-VC\SDL2_ttf-2.24.0\include;E:\Projects\LIBRARIES\SDL2_image-devel-2.8.4-VC\SDL2_image-2.8.4\include;$(IncludePath)</IncludePath>
-    <LibraryPath>E:\Projects\LIBRARIES\SDL2-devel-2.30.11-VC\SDL2-2.30.11\lib\x64;E:\Projects\LIBRARIES\SDL2_ttf-devel-2.24.0-VC\SDL2_ttf-2.24.0\lib\x64;E:\Projects\LIBRARIES\SDL2_image-devel-2.8.4-VC\SDL2_image-2.8.4\lib\x64;$(LibraryPath)</LibraryPath>
+    <LibraryPath>E:\Projects\LIBRARIES\SDL2-devel-2.30.11-VC\SDL2-2.30.11\lib\x64;E:\Projects\LIBRARIES\SDL2_ttf-devel-2.24.0-VC\SDL2_ttf-2.24.0\lib;E:\Projects\LIBRARIES\SDL2_image-devel-2.8.4-VC\SDL2_image-2.8.4\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <IncludePath>E:\Projects\LIBRARIES\SDL2-devel-2.30.11-VC\SDL2-2.30.11\include;E:\Projects\LIBRARIES\SDL2_ttf-devel-2.24.0-VC\SDL2_ttf-2.24.0\include;E:\Projects\LIBRARIES\SDL2_image-devel-2.8.4-VC\SDL2_image-2.8.4\include;$(IncludePath)</IncludePath>
-    <LibraryPath>E:\Projects\LIBRARIES\SDL2-devel-2.30.11-VC\SDL2-2.30.11\lib\x64;E:\Projects\LIBRARIES\SDL2_ttf-devel-2.24.0-VC\SDL2_ttf-2.24.0\lib\x64;E:\Projects\LIBRARIES\SDL2_image-devel-2.8.4-VC\SDL2_image-2.8.4\lib\x64;$(LibraryPath)</LibraryPath>
+    <LibraryPath>E:\Projects\LIBRARIES\SDL2-devel-2.30.11-VC\SDL2-2.30.11\lib\x64;E:\Projects\LIBRARIES\SDL2_ttf-devel-2.24.0-VC\SDL2_ttf-2.24.0\lib;E:\Projects\LIBRARIES\SDL2_image-devel-2.8.4-VC\SDL2_image-2.8.4\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -97,7 +97,8 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_ttf.lib;SDL2_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>E:\Projects\LIBRARIES\SDL2_ttf-devel-2.24.0-VC\SDL2_ttf-2.24.0\lib\x64;E:\Projects\LIBRARIES\SDL2-devel-2.30.11-VC\SDL2-2.30.11\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -115,7 +116,8 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_ttf.lib;SDL2_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>E:\Projects\LIBRARIES\SDL2_ttf-devel-2.24.0-VC\SDL2_ttf-2.24.0\lib\x64;E:\Projects\LIBRARIES\SDL2-devel-2.30.11-VC\SDL2-2.30.11\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -129,7 +131,8 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_ttf.lib;SDL2_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>E:\Projects\LIBRARIES\SDL2_ttf-devel-2.24.0-VC\SDL2_ttf-2.24.0\lib\x64;E:\Projects\LIBRARIES\SDL2-devel-2.30.11-VC\SDL2-2.30.11\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -147,7 +150,8 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_ttf.lib;SDL2_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>E:\Projects\LIBRARIES\SDL2_ttf-devel-2.24.0-VC\SDL2_ttf-2.24.0\lib\x64;E:\Projects\LIBRARIES\SDL2-devel-2.30.11-VC\SDL2-2.30.11\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
