--- a/ProiectMC/Game/Client/Client.vcxproj.filters
+++ b/ProiectMC/Game/Client/Client.vcxproj.filters
@@ -15,56 +15,32 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\ClientFunctions.cpp">
+    <ClCompile Include="ClientMain.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\ClientMain.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\ClientLogic.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\SDLHelper.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\NetworkManager.cpp">
+    <ClCompile Include="ClientLogic.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="include\ClientFunctions.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="include\ClientLogic.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="include\SDLHelper.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="include\NetworkManager.h">
+    <ClInclude Include="ClientLogic.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="include\SDL2.dll" />
-    <None Include="include\SDL2_image.dll" />
-    <None Include="include\SDL2_ttf.dll" />
+    <None Include="SDL2.dll">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="SDL2_image.dll">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="SDL2_ttf.dll">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="images\brick.jpg">
+    <Font Include="PixelifySans.ttf">
       <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="images\grass.jpg">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="images\cat.png">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="images\logo.jpg">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="images\policeCar.png">
-      <Filter>Resource Files</Filter>
-    </Image>
+    </Font>
   </ItemGroup>
 </Project>
