--- a/ProiectMC/ServerMC/ServerMC.vcxproj.filters
+++ b/ProiectMC/ServerMC/ServerMC.vcxproj.filters
@@ -132,4 +132,7 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="BattleCity.sqlite" />
+  </ItemGroup>
 </Project>
