--- a/ProiectMC/ClientMC/ClientMC.vcxproj.filters
+++ b/ProiectMC/ClientMC/ClientMC.vcxproj.filters
@@ -79,4 +79,7 @@
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
+  <ItemGroup>
+    <Font Include="include\PixelifySans.ttf" />
+  </ItemGroup>
 </Project>
