--- a/ProiectMC/ServerMC/ServerMC.vcxproj
+++ b/ProiectMC/ServerMC/ServerMC.vcxproj
@@ -182,6 +182,11 @@
   <ItemGroup>
     <None Include="BattleCity.sqlite" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Bomb\Bomb.vcxproj">
+      <Project>{1aebd2b0-dee1-45d0-9209-0e9b45694c75}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
