--- a/.gitignore
+++ b/.gitignore
@@ -397,3 +397,6 @@ FodyWeavers.xsd
 # JetBrains Rider
 *.sln.iml
 /ProiectMC/ClientMC/ClientMC.vcxproj.filters
+/ProiectMC/ServerMC/include/Bomb.dll
+/ProiectMC/ServerMC/ServerMC.vcxproj.filters
+/ProiectMC/ServerMC/ServerMC.vcxproj
